[package]
name = "sokoban-fuzz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
printing = []

[dependencies]
libafl = { git = "https://github.com/AFLplusplus/LibAFL.git" }
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.5.1"
sokoban = { version = "0.2.3", features = ["serde"] }
