[package]
name = "sokoban-fuzz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libafl = { version = "0.11.2", features = ["errors_backtrace", "rand_trait"] }
libafl_bolts = { version = "0.11.2" }
rand = "0.8.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
sokoban = { version = "0.2.3", features = ["serde"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
serde_json = "1.0.115"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true
